--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="input">
         <input type="text" placeholder="Enter the city" class="input_text">
-        <input type="text" placeholder="Enter the language" class="input_lang">
+        <input type="text" placeholder="Language, for example 'ru'" class="input_lang">
         <select class="input_units">
             <option>metric</option>
             <option>imperial</option>
